--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,6 +6,7 @@
   z-index: 1000;
   padding: 16px 0;
   transition: all var(--transition-medium);
+  will-change: transform;
 }
 
 .navbar--scrolled {
@@ -69,7 +70,7 @@
 }
 
 .navbar__link--active::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 4px;
   left: 50%;
